Fix CSS paths and add debug logging

--- a/frontend/batch.html
+++ b/frontend/batch.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batch Prediction - CreditPath-AI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -141,6 +142,6 @@
         </div>
     </footer>
 
-    <script src="js/batch.js"></script>
+     <script src="/static/js/batch.js"></script>
 </body>
 </html>
