--- a/frontend/predict.html
+++ b/frontend/predict.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Prediction - CreditPath-AI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -153,6 +154,6 @@
         </div>
     </footer>
 
-    <script src="js/predict.js"></script>
+     <script src="/static/js/predict.js"></script>
 </body>
 </html>
