Fix all navigation links to use routes instead of file paths

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,9 +16,9 @@
                 <span class="logo-text">CreditPath-AI</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="predict.html">Single Prediction</a></li>
-                <li><a href="batch.html">Batch Processing</a></li>
+                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/predict">Single Prediction</a></li>
+                <li><a href="/batch">Batch Processing</a></li>
             </ul>
         </div>
     </nav>
@@ -29,8 +29,8 @@
             <h1 class="hero-title">AI-Powered Loan Default Risk Prediction</h1>
             <p class="hero-subtitle">Make data-driven decisions with advanced machine learning for credit risk assessment</p>
             <div class="hero-buttons">
-                <a href="predict.html" class="btn btn-primary">Start Prediction</a>
-                <a href="batch.html" class="btn btn-secondary">Batch Processing</a>
+                <a href="/predict" class="btn btn-primary">Start Prediction</a>
+                <a href="/batch" class="btn btn-secondary">Batch Processing</a>
             </div>
             
             <div class="hero-stats">
@@ -60,14 +60,14 @@
                     <div class="feature-icon">🎯</div>
                     <h3>Single Prediction</h3>
                     <p>Get instant default risk assessment for individual borrowers with detailed recommendations and actionable insights.</p>
-                    <a href="predict.html" class="feature-link">Try Now →</a>
+                    <a href="/predict" class="feature-link">Try Now →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">📊</div>
                     <h3>Batch Processing</h3>
                     <p>Upload CSV files to process multiple borrowers at once. Download results with risk levels and recovery actions.</p>
-                    <a href="batch.html" class="feature-link">Upload CSV →</a>
+                    <a href="/batch" class="feature-link">Upload CSV →</a>
                 </div>
 
                 <div class="feature-card">
@@ -142,8 +142,8 @@
             <h2>Ready to Make Smarter Lending Decisions?</h2>
             <p>Start predicting loan default risk with industry-leading accuracy</p>
             <div class="cta-buttons">
-                <a href="predict.html" class="btn btn-primary-large">Start Single Prediction</a>
-                <a href="batch.html" class="btn btn-secondary-large">Upload CSV for Batch</a>
+                <a href="/predict" class="btn btn-primary-large">Start Single Prediction</a>
+                <a href="/batch" class="btn btn-secondary-large">Upload CSV for Batch</a>
             </div>
         </div>
     </section>
