--- a/frontend/batch.html
+++ b/frontend/batch.html
@@ -16,9 +16,9 @@
                 <span class="logo-text">CreditPath-AI</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="predict.html">Single Prediction</a></li>
-                <li><a href="batch.html" class="active">Batch Processing</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/predict">Single Prediction</a></li>
+                <li><a href="/batch" class="active">Batch Processing</a></li>
             </ul>
         </div>
     </nav>
