--- a/frontend/predict.html
+++ b/frontend/predict.html
@@ -16,9 +16,9 @@
                 <span class="logo-text">CreditPath-AI</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="predict.html" class="active">Single Prediction</a></li>
-                <li><a href="batch.html">Batch Processing</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/predict" class="active">Single Prediction</a></li>
+                <li><a href="/batch">Batch Processing</a></li>
             </ul>
         </div>
     </nav>
