--- a/frontend/batch.html
+++ b/frontend/batch.html
@@ -16,7 +16,7 @@
                 <span class="logo-text">CreditPath-AI</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="/">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="/predict">Single Prediction</a></li>
                 <li><a href="/batch" class="active">Batch Processing</a></li>
             </ul>
