--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
                 <span class="logo-text">CreditPath-AI</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/home" class="active">Home</a></li>
                 <li><a href="/predict">Single Prediction</a></li>
                 <li><a href="/batch">Batch Processing</a></li>
             </ul>
