Add debug logging to HTML routes and improve error handling

--- a/frontend/predict.html
+++ b/frontend/predict.html
@@ -16,7 +16,7 @@
                 <span class="logo-text">CreditPath-AI</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="/home" class="active">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="/predict" class="active">Single Prediction</a></li>
                 <li><a href="/batch">Batch Processing</a></li>
             </ul>
