--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreditPath-AI - Login & Signup</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/login-styles.css">
 </head>
 <body>
     <div class="auth-container">
